--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,9 +1,15 @@
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
 
-#RUN git clone git@github.com:thisrepo/thisrepo.git
-#RUN go build thisrepo/cmd/node/main.go -o nodeserver
+#RUN git clone git@github.com:uxff/flexdrive.git
+#RUN cd flexdrive
+#RUN go build -o flexdrive cmd/node/main.go
 
-ADD nodeserver /
+ADD flexdrive /
+ADD pkg/app/admin/view /pkg/app/admin/view
+ADD pkg/app/customer/view /pkg/app/customer/view
+ADD static /
+
 ADD /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-CMD ["/nodeserver"]
+
+CMD ["/flexdrive"]
